# husky

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  README.md  build.sh
.github/workflows/: test.yml
demo/: Makefile  curl.sh  debug.sh  husky.cpp  husky_demo.cpp  husky_demo.h  restart.sh  run.sh  start.sh  stop.sh
example/: CMakeLists.txt  nonblockingserver.cpp  threadpoolserver.cpp
husky/: Daemon.cpp  Daemon.h  HttpReqInfo.cpp  HttpReqInfo.h  HttpReqInfo.hpp  Makefile  ServerFrame.cpp  ServerFrame.h  ServerFrameLockAccept.cpp  ServerFrameLockAccept.h  SimpleThread.h  ThreadManager.h  UtilDef.h  Worker.cpp  Worker.h  globals.h  headers.h
include/: HttpReqInfo.hpp  IRequestHandler.hpp  NWorkerThread.hpp  NetUtils.hpp  NonblockingServer.hpp  ThreadPoolServer.hpp  WorkerThread.hpp  http_req_info.h  net_util.h  thread_pool_server.h  worker_thread.h
scripts/: restart.sh  run.sh  stop.sh
src/: CMakeLists.txt  Character.h  Daemon.cpp  Daemon.h  EpollServer.hpp  FileOperation.cpp  FileOperation.h  HttpReqInfo.hpp  HuskyServer.hpp  Makefile  Server.cpp  Server.h  ServerFrame.cpp  ServerFrame.hpp  ServerFrameLockAccept.cpp  ServerFrameLockAccept.h  SimpleThread.h  UtilDef.h  XmlHttp.cpp  XmlHttp.h  globals.h  hash_wrap.h  headers.h  main.cpp
test/: CMakeLists.txt  HttpReqInfo.cpp  curl.sh  demo.cpp  httpload.sh  husky.cpp  load.py  urls
test/demo/: CMakeLists.txt  husky.cpp
test/servertest/: curl.res  load_test.py  run_curl.sh
test/testdata/: get.urls  post.data
test/unittest/: CMakeLists.txt  TEpollServer.cpp  THttpReqInfo.cpp  TThreadPoolServer.cpp  http_req_info_ut.cc  thread_pool_server_ut.cc
