PROJECT(HUSKY)

SET(CMAKE_CXX_FLAGS "-std=c++11")

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_DEFINITIONS(-O3 -Wall -g)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/submodules/limonp/include
    ${PROJECT_SOURCE_DIR}/include
)

ADD_SUBDIRECTORY(example)
ADD_SUBDIRECTORY(test)

ENABLE_TESTING()
ADD_TEST(NAME test COMMAND test.run)
