SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

SET(LIBHUSKY_SRC Daemon.cpp)
ADD_LIBRARY(husky STATIC ${LIBHUSKY_SRC})

INSTALL(TARGETS husky ARCHIVE DESTINATION lib/Husky)
INSTALL(FILES Daemon.h globals.h HttpReqInfo.hpp ServerFrame.hpppp ThreadManager.hpp DESTINATION include/Husky)
